--- a/packages/colonizers/app.json
+++ b/packages/colonizers/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Colonizers",
-  "description": "",
+  "description": "A game based on \"The Settlers of Catan\" by Klaus Teuber.",
   "repository": "https://github.com/sibartlett/colonizers",
   "addons": [
     "mongohq"
