--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bunyan": "^1.2.3",
     "colonizers-client": "git://github.com/colonizers/colonizers-client",
+    "colonizers-client-tilesets": "git://github.com/colonizers/colonizers-client-tilesets",
     "colonizers-server": "git://github.com/colonizers/colonizers-server",
     "nconf": "^0.7.1"
   }
