--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -11,27 +11,27 @@
     "npm": "2.1.x"
   },
   "dependencies": {
-    "async": "^0.9.0",
-    "bootstrap": "^3.3.1",
+    "async": "0.9.0",
+    "bootstrap": "3.3.2",
     "colonizers-core": "git://github.com/colonizers/colonizers-core",
-    "component-emitter": "^1.1.3",
-    "hammerjs": "^2.0.4",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "jquery": "^2.1.3",
-    "jquery-mousewheel": "^3.1.12",
-    "kinetic": "^5.0.6",
-    "knockout": "^3.2.0",
-    "moment": "^2.9.0",
-    "screenfull": "^2.0.0",
-    "socket.io-client": "^1.2.1",
-    "underscore": "^1.7.0"
+    "component-emitter": "1.2.0",
+    "hammerjs": "2.0.4",
+    "jquery": "2.1.3",
+    "jquery-mousewheel": "3.1.12",
+    "kinetic": "5.2.0",
+    "knockout": "3.3.0",
+    "moment": "2.9.0",
+    "screenfull": "2.0.0",
+    "socket.io-client": "1.3.5",
+    "underscore": "1.8.2"
   },
   "devDependencies": {
     "colonizers-dev": "git://github.com/colonizers/colonizers-dev",
     "gulp": "^3.8.10",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
-    "gulp-less": "^2.0.1",
+    "gulp-less": "^3.0.1",
     "jshint-stylish": "^1.0.0"
   }
 }
