--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -10,13 +10,13 @@
     "async": "0.9.0",
     "bootstrap": "3.3.2",
     "colonizers-core": "git://github.com/colonizers/colonizers-core",
-    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "component-emitter": "1.2.0",
     "hammerjs": "2.0.4",
+    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "jquery": "2.1.3",
     "jquery-mousewheel": "3.1.12",
-    "kinetic": "5.2.0",
     "knockout": "3.3.0",
+    "konva": "^0.9.0",
     "moment": "2.9.0",
     "screenfull": "2.0.0",
     "socket.io-client": "1.3.5",
