--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -29,5 +29,10 @@
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.1",
     "jshint-stylish": "^1.0.0"
+  },
+  "browserify": {
+    "transform": [
+      "brfs"
+    ]
   }
 }
