--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -5,21 +5,19 @@
   "private": true,
   "version": "0.0.0",
   "description": "Colonizers client component",
-  "main": "lib/index.js",
+  "main": "app/js/client.js",
   "dependencies": {
     "async": "0.9.0",
     "bootstrap": "3.3.2",
     "colonizers-core": "git://github.com/colonizers/colonizers-core",
     "component-emitter": "1.2.0",
     "hammerjs": "2.0.4",
-    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "jquery": "2.1.3",
     "jquery-mousewheel": "3.1.12",
     "knockout": "3.3.0",
     "konva": "^0.9.0",
     "moment": "2.9.0",
     "screenfull": "2.0.0",
-    "socket.io-client": "1.3.5",
     "underscore": "1.8.2"
   },
   "devDependencies": {
@@ -28,6 +26,7 @@
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.1",
+    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "jshint-stylish": "^1.0.0"
   },
   "browserify": {
