--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -21,11 +21,13 @@
     "underscore": "1.8.2"
   },
   "devDependencies": {
-    "colonizers-dev": "git://github.com/colonizers/colonizers-dev",
     "gulp": "^3.8.10",
+    "gulp-concat": "^2.5.2",
+    "gulp-insert": "^0.4.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.1",
+    "gulp-replace": "^0.5.3",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
     "jshint-stylish": "^1.0.0"
   },
