Added README, and bumped version to 0.0.1

--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -2,14 +2,13 @@
   "name": "colonizers-client",
   "license": "AGPL-3.0",
   "author": "Simon Bartlett",
-  "private": true,
-  "version": "0.0.0",
-  "description": "Colonizers client component",
+  "version": "0.0.1",
+  "description": "Colonizers client",
   "main": "app/js/client.js",
   "dependencies": {
     "async": "0.9.0",
     "bootstrap": "3.3.2",
-    "colonizers-core": "git://github.com/colonizers/colonizers-core",
+    "colonizers-core": "^0.0.1",
     "component-emitter": "1.2.0",
     "hammerjs": "2.0.4",
     "jquery": "2.1.3",
