--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -20,15 +20,20 @@
     "underscore": "1.8.2"
   },
   "devDependencies": {
+    "dataurl": "^0.1.0",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.5.2",
+    "gulp-group-files": "^1.0.0",
+    "gulp-imagemin": "^2.2.1",
     "gulp-insert": "^0.4.0",
     "gulp-jscs": "^1.4.0",
     "gulp-jshint": "^1.9.0",
     "gulp-less": "^3.0.1",
     "gulp-replace": "^0.5.3",
+    "gulp-util": "^3.0.4",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "through": "^2.3.6"
   },
   "browserify": {
     "transform": [
