--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -19,9 +19,8 @@
     "brfs": "^1.4.0",
     "browserify-middleware": "^5.0.2",
     "bunyan": "^1.3.4",
-    "colonizers-client": "git://github.com/colonizers/colonizers-client",
-    "colonizers-client-tilesets": "git://github.com/colonizers/colonizers-client-tilesets",
-    "colonizers-core": "git://github.com/colonizers/colonizers-core",
+    "colonizers-client": "^0.0.2",
+    "colonizers-core": "^0.0.1",
     "component-emitter": "^1.2.0",
     "connect-mongo": "^0.7.0",
     "cookie-parser": "^1.3.4",
