--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -1,9 +1,11 @@
 {
   "name": "colonizers-client",
   "license": "AGPL-3.0",
-  "author": "Simon Bartlett",
+  "author": "Simon Bartlett <simon@sibartlett.com>",
   "version": "0.0.2",
   "description": "Colonizers client",
+  "homepage": "http://colonizers.github.io",
+  "repository": "git://github.com/colonizers/colonizers-client",
   "main": "app/js/client.js",
   "dependencies": {
     "async": "0.9.0",
