--- a/package.json
+++ b/package.json
@@ -9,44 +9,49 @@
   "repository": "git://github.com/colonizers/colonizers",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js | bunyan -o short"
+    "start": "node index.js"
   },
   "engines": {
     "node": "0.12.x",
     "npm": "2.6.x"
   },
   "dependencies": {
-    "body-parser": "^1.12.0",
-    "bootstrap": "3.3.2",
+    "bcryptjs": "^2.1.0",
+    "boom": "^2.7.1",
+    "bootstrap": "3.3.4",
     "brfs": "^1.4.0",
-    "browserify-middleware": "^5.0.2",
-    "bunyan": "^1.3.4",
-    "colonizers-client": "^0.0.2",
-    "colonizers-core": "^0.0.1",
+    "browserify": "^9.0.8",
+    "colonizers-client": "^0.0.3",
+    "colonizers-core": "^0.0.2",
     "component-emitter": "^1.2.0",
-    "connect-mongo": "^0.7.0",
-    "cookie-parser": "^1.3.4",
-    "express": "^4.12.2",
-    "express-session": "^1.10.3",
-    "hogan-express": "^0.5.2",
+    "handlebars": "^3.0.1",
+    "hapi": "^8.4.0",
+    "hapi-auth-basic": "^2.0.0",
+    "hapi-auth-cookie": "^2.0.0",
+    "hapi-browserify": "^0.0.2",
+    "hapi-context-credentials": "^1.0.0",
+    "hapi-hogan": "^1.0.1",
+    "hapi-io": "^0.0.5",
+    "hapi-mongoose-db-connector": "^2.0.1",
+    "hoek": "^2.12.0",
+    "joi": "^6.2.0",
     "jquery": "2.1.3",
-    "moment": "2.9.0",
-    "mongoose": "~3.8.21",
-    "nconf": "^0.7.1",
+    "knockout": "^3.3.0",
+    "lout": "^6.2.2",
+    "moment": "2.10.2",
+    "mongoose": "~4.0.1",
     "node-uuid": "^1.4.2",
-    "passport": "^0.2.1",
-    "passport-local": "^1.0.0",
-    "passport.socketio": "^3.4.1",
     "socket.io": "1.3.5",
     "socket.io-client": "^1.3.5",
-    "underscore": "1.8.2"
+    "sweetalert": "^0.5.0",
+    "underscore": "1.8.3"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat": "^2.5.2",
     "gulp-insert": "^0.4.0",
-    "gulp-jscs": "^1.4.0",
-    "gulp-jshint": "^1.9.0",
+    "gulp-jscs": "^1.5.2",
+    "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.1",
     "gulp-replace": "^0.5.3",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
