--- a/app.json
+++ b/app.json
@@ -13,6 +13,10 @@
     "COOKIE_SECRET": {
       "description": "Session cookies are signed with this secret to prevent tampering",
       "generator": "secret"
+    },
+    "HOST": {
+      "description": "The host that the application will bind to",
+      "value": "0.0.0.0"
     }
   }
 }
