--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -41,10 +41,12 @@
     "moment": "2.10.2",
     "mongoose": "~4.0.1",
     "node-uuid": "^1.4.2",
+    "rabbus": "^0.4.3",
     "socket.io": "1.3.5",
     "socket.io-client": "^1.3.5",
     "sweetalert": "^0.5.0",
-    "underscore": "1.8.3"
+    "underscore": "1.8.3",
+    "wascally": "^0.2.5"
   },
   "devDependencies": {
     "gulp": "^3.8.10",
