--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
   "description": "A game based on \"The Settlers of Catan\" by Klaus Teuber.",
   "repository": "https://github.com/sibartlett/colonizers",
   "addons": [
+    "cloudamqp",
     "mongolab"
   ],
   "env": {
