Added travis file and test runner. * jshint and jscs > eslint

--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -7,6 +7,9 @@
   "homepage": "http://colonizers.github.io",
   "repository": "git://github.com/colonizers/colonizers-client",
   "main": "lib/index.js",
+  "scripts": {
+    "test": "lab --verbose --lint"
+  },
   "dependencies": {
     "async": "0.9.0",
     "bootstrap": "3.3.4",
@@ -22,19 +25,18 @@
     "underscore": "1.8.3"
   },
   "devDependencies": {
+    "code": "^1.4.0",
     "dataurl": "^0.1.0",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.5.2",
     "gulp-group-files": "^1.0.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-insert": "^0.4.0",
-    "gulp-jscs": "^1.5.2",
-    "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.2",
     "gulp-replace": "^0.5.3",
     "gulp-util": "^3.0.4",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "jshint-stylish": "^1.0.0",
+    "lab": "^5.8.1",
     "through": "^2.3.7"
   },
   "browserify": {
