--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "repository": "git://github.com/colonizers/colonizers",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "test": "lab --verbose --lint"
   },
   "engines": {
     "node": "0.12.x",
@@ -49,14 +50,13 @@
     "wascally": "^0.2.5"
   },
   "devDependencies": {
+    "code": "^1.4.0",
     "gulp": "^3.8.10",
     "gulp-concat": "^2.5.2",
     "gulp-insert": "^0.4.0",
-    "gulp-jscs": "^1.5.2",
-    "gulp-jshint": "^1.10.0",
     "gulp-less": "^3.0.1",
     "gulp-replace": "^0.5.3",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "jshint-stylish": "^1.0.0"
+    "lab": "^5.8.1"
   }
 }
