--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -18,30 +18,30 @@
   },
   "dependencies": {
     "bcryptjs": "^2.1.0",
-    "boom": "^2.7.1",
+    "boom": "^2.7.2",
     "bootstrap": "3.3.4",
     "brfs": "^1.4.0",
-    "colonizers-client": "^0.0.3",
-    "colonizers-core": "^0.0.4",
+    "colonizers-client": "^0.0.4",
+    "colonizers-core": "^0.0.5",
     "component-emitter": "^1.2.0",
-    "good": "^6.1.2",
+    "good": "^6.1.3",
     "good-console": "^5.0.0",
-    "handlebars": "^3.0.1",
-    "hapi": "^8.4.0",
+    "handlebars": "^3.0.3",
+    "hapi": "^8.5.0",
     "hapi-auth-basic": "^2.0.0",
     "hapi-auth-cookie": "^2.0.0",
     "hapi-browserify": "^0.0.3",
     "hapi-context-credentials": "^1.0.0",
     "hapi-io": "^0.0.5",
     "hapi-mongoose-db-connector": "^2.0.1",
-    "hoek": "^2.12.0",
-    "joi": "^6.2.0",
-    "jquery": "2.1.3",
-    "knockout": "^3.3.0",
+    "hoek": "^2.13.0",
+    "joi": "^6.4.1",
+    "jquery": "2.1.4",
+    "knockout": "3.3.0",
     "lout": "^6.2.2",
-    "moment": "2.10.2",
-    "mongoose": "~4.0.1",
-    "node-uuid": "^1.4.2",
+    "moment": "2.10.3",
+    "mongoose": "~4.0.3",
+    "node-uuid": "^1.4.3",
     "rabbus": "^0.4.3",
     "socket.io": "1.3.5",
     "socket.io-client": "^1.3.5",
@@ -51,12 +51,12 @@
   },
   "devDependencies": {
     "code": "^1.4.0",
-    "gulp": "^3.8.10",
+    "gulp": "^3.8.11",
     "gulp-concat": "^2.5.2",
     "gulp-insert": "^0.4.0",
-    "gulp-less": "^3.0.1",
+    "gulp-less": "^3.0.3",
     "gulp-replace": "^0.5.3",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "lab": "^5.8.1"
+    "lab": "^5.9.0"
   }
 }
