--- a/packages/colonizers-desktop/package.json
+++ b/packages/colonizers-desktop/package.json
@@ -9,7 +9,15 @@
   "main": "lib/index.js",
   "scripts": {
     "start": "electron .",
-    "test": "lab --verbose --lint"
+    "test": "lab --verbose --lint",
+
+    "build": "rm -rf dist ; npm run linux-x86 ; npm run linux-x64 ; npm run osx",
+
+    "linux-x86": "electron-packager . Colonizers --platform=linux --arch=ia32 --version=0.27.1 --ignore=dist --out=dist/Colonizers-linux-x86 --asar",
+
+    "linux-x64": "electron-packager . Colonizers --platform=linux --arch=x64 --version=0.27.1 --ignore=dist --out=dist/Colonizers-linux-x64 --asar",
+
+    "osx": "electron-packager . Colonizers --platform=darwin --arch=x64 --version=0.27.1 --ignore=dist --out=dist/Colonizers-osx --asar"
   },
   "dependencies": {
     "colonizers-client": "^0.0.5",
@@ -17,6 +25,7 @@
   },
   "devDependencies": {
     "code": "^1.4.0",
+    "electron-packager": "^4.1.2",
     "electron-prebuilt": "^0.27.1",
     "lab": "^5.9.0"
   }
