--- a/packages/colonizers-desktop/.eslintrc
+++ b/packages/colonizers-desktop/.eslintrc
@@ -11,6 +11,10 @@
         "quotes": [2, "single"],
         "strict": [2, "global"],
 
-        "no-path-concat": 0
+        "no-path-concat": 0,
+
+        "space-in-parens": [2, "never"],
+        "indent": [2, 2],
+        "linebreak-style": [2, "unix"]
     }
 }
