--- a/packages/colonizers-desktop/package.json
+++ b/packages/colonizers-desktop/package.json
@@ -13,11 +13,11 @@
 
     "build": "rm -rf __dist__ ; npm run linux-x86 ; npm run linux-x64 ; npm run osx",
 
-    "linux-x86": "electron-packager . Colonizers --platform=linux --arch=ia32 --version=0.27.1 --out=./__dist__/Colonizers-linux-x86 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
+    "linux-x86": "electron-packager . Colonizers --platform=linux --arch=ia32 --version=0.27.3 --out=./__dist__/Colonizers-linux-x86 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
 
-    "linux-x64": "electron-packager . Colonizers --platform=linux --arch=x64 --version=0.27.1 --out=./__dist__/Colonizers-linux-x64 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
+    "linux-x64": "electron-packager . Colonizers --platform=linux --arch=x64 --version=0.27.3 --out=./__dist__/Colonizers-linux-x64 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
 
-    "osx": "electron-packager . Colonizers --platform=darwin --arch=x64 --version=0.27.1 --out=./__dist__/Colonizers-osx --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab"
+    "osx": "electron-packager . Colonizers --platform=darwin --arch=x64 --version=0.27.3 --asar --out=./__dist__/Colonizers-osx --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab"
   },
   "dependencies": {
     "colonizers-client": "^0.0.5",
@@ -26,7 +26,7 @@
   "devDependencies": {
     "code": "^1.4.0",
     "electron-packager": "^4.1.2",
-    "electron-prebuilt": "^0.27.1",
-    "lab": "^5.9.0"
+    "electron-prebuilt": "^0.27.3",
+    "lab": "^5.10.0"
   }
 }
