--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -17,29 +17,31 @@
     "npm": "2.x.x"
   },
   "dependencies": {
+    "babel": "^5.6.14",
+    "babelify": "^6.1.2",
     "bcryptjs": "^2.1.0",
     "boom": "^2.8.0",
-    "bootstrap": "3.3.4",
+    "bootstrap": "3.3.5",
     "brfs": "^1.4.0",
-    "colonizers-client": "^0.0.5",
-    "colonizers-core": "^0.0.5",
+    "colonizers-client": "^0.0.6",
+    "colonizers-core": "^0.0.6",
     "component-emitter": "^1.2.0",
-    "good": "^6.1.4",
+    "good": "^6.2.0",
     "good-console": "^5.0.2",
     "handlebars": "^3.0.3",
     "hapi": "^8.6.1",
     "hapi-auth-basic": "^2.0.0",
     "hapi-auth-cookie": "^3.0.1",
-    "hapi-browserify": "^0.0.3",
+    "hapi-browserify": "^0.0.4",
     "hapi-context-credentials": "^1.0.0",
     "hapi-io": "^0.0.7",
     "hoek": "^2.14.0",
-    "joi": "^6.4.3",
+    "joi": "^6.5.0",
     "jquery": "2.1.4",
     "knockout": "3.3.0",
     "lout": "^6.2.2",
     "moment": "2.10.3",
-    "mongoose": "~4.0.5",
+    "mongoose": "~4.0.6",
     "node-uuid": "^1.4.3",
     "rabbus": "^0.4.3",
     "socket.io": "1.3.5",
@@ -51,11 +53,11 @@
   "devDependencies": {
     "code": "^1.4.0",
     "gulp": "^3.9.0",
-    "gulp-concat": "^2.5.2",
+    "gulp-concat": "^2.6.0",
     "gulp-insert": "^0.4.0",
     "gulp-less": "^3.0.3",
     "gulp-replace": "^0.5.3",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "lab": "^5.10.0"
+    "lab": "^5.11.1"
   }
 }
