--- a/package.json
+++ b/package.json
@@ -17,47 +17,49 @@
     "npm": "2.x.x"
   },
   "dependencies": {
-    "babel": "^5.6.14",
-    "babelify": "^6.1.2",
-    "bcryptjs": "^2.1.0",
-    "boom": "^2.8.0",
+    "babel": "^5.8.23",
+    "babelify": "^6.3.0",
+    "bcryptjs": "^2.3.0",
+    "boom": "^2.9.0",
     "bootstrap": "3.3.5",
-    "brfs": "^1.4.0",
-    "colonizers-client": "^0.0.6",
-    "colonizers-core": "^0.0.6",
+    "brfs": "^1.4.1",
+    "colonizers-client": "^0.0.7",
+    "colonizers-core": "^0.0.7",
     "component-emitter": "^1.2.0",
-    "good": "^6.2.0",
-    "good-console": "^5.0.2",
-    "handlebars": "^3.0.3",
-    "hapi": "^8.6.1",
-    "hapi-auth-basic": "^2.0.0",
-    "hapi-auth-cookie": "^3.0.1",
+    "good": "^6.4.0",
+    "good-console": "^5.1.0",
+    "handlebars": "^4.0.3",
+    "hapi": "^10.3.0",
+    "hapi-auth-basic": "^3.0.0",
+    "hapi-auth-cookie": "^3.1.0",
     "hapi-browserify": "^0.0.4",
-    "hapi-context-credentials": "^1.0.0",
-    "hapi-io": "^0.0.7",
-    "hoek": "^2.14.0",
-    "joi": "^6.5.0",
+    "hapi-context-credentials": "^2.0.0",
+    "hapi-io": "^0.0.11",
+    "hoek": "^2.16.3",
+    "inert": "^3.0.2",
+    "joi": "^6.8.1",
     "jquery": "2.1.4",
     "knockout": "3.3.0",
-    "lout": "^6.2.2",
-    "moment": "2.10.3",
-    "mongoose": "~4.0.6",
+    "lout": "^7.2.0",
+    "moment": "2.10.6",
+    "mongoose": "~4.1.9",
     "node-uuid": "^1.4.3",
     "rabbus": "^0.4.3",
-    "socket.io": "1.3.5",
-    "socket.io-client": "^1.3.5",
-    "sweetalert": "^1.0.1",
+    "socket.io": "1.3.7",
+    "socket.io-client": "^1.3.7",
+    "sweetalert": "^1.1.0",
     "underscore": "1.8.3",
+    "vision": "^3.0.0",
     "wascally": "^0.2.7"
   },
   "devDependencies": {
-    "code": "^1.4.0",
+    "code": "^1.5.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
-    "gulp-insert": "^0.4.0",
+    "gulp-insert": "^0.5.0",
     "gulp-less": "^3.0.3",
-    "gulp-replace": "^0.5.3",
+    "gulp-replace": "^0.5.4",
     "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "lab": "^5.11.1"
+    "lab": "^6.1.0"
   }
 }
