--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -1,8 +1,8 @@
 {
+  "private": true,
   "name": "colonizers",
   "license": "AGPL-3.0",
   "author": "Simon Bartlett <simon@sibartlett.com>",
-  "private": true,
   "version": "0.0.0",
   "description": "",
   "homepage": "http://colonizers.github.io",
@@ -12,41 +12,36 @@
     "start": "node server/index.js",
     "test": "lab --verbose --lint"
   },
-  "engines": {
-    "node": "0.12.x",
-    "npm": "2.x.x"
-  },
   "dependencies": {
-    "babel": "^5.8.23",
-    "babelify": "^6.3.0",
-    "bcryptjs": "^2.3.0",
-    "boom": "^2.9.0",
+    "babel-core": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
+    "babelify": "^7.3.0",
+    "bcryptjs": "^2.4.3",
+    "boom": "^5.2.0",
     "bootstrap": "3.3.5",
     "brfs": "^1.4.1",
-    "colonizers-client": "^0.0.7",
-    "colonizers-core": "^0.0.7",
     "component-emitter": "^1.2.0",
-    "good": "^6.4.0",
-    "good-console": "^5.1.0",
+    "good": "^7.3.0",
+    "good-console": "^6.4.1",
     "handlebars": "^4.0.3",
-    "hapi": "^10.3.0",
-    "hapi-auth-basic": "^3.0.0",
-    "hapi-auth-cookie": "^3.1.0",
+    "hapi": "^16.7.0",
+    "hapi-auth-basic": "^4.2.0",
+    "hapi-auth-cookie": "^7.1.0",
     "hapi-browserify": "^0.0.4",
     "hapi-context-credentials": "^2.0.0",
-    "hapi-io": "^0.0.11",
-    "hoek": "^2.16.3",
+    "hapi-io": "^0.2.1",
+    "hoek": "^4.2.1",
     "inert": "^3.0.2",
-    "joi": "^6.8.1",
+    "joi": "^10.6.0",
     "jquery": "2.1.4",
     "knockout": "3.3.0",
     "lout": "^7.2.0",
     "moment": "2.10.6",
-    "mongoose": "~4.1.9",
+    "mongoose": "^5.6.4",
     "node-uuid": "^1.4.3",
     "rabbus": "^0.4.3",
-    "socket.io": "1.3.7",
-    "socket.io-client": "^1.3.7",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3",
     "sweetalert": "^1.1.0",
     "underscore": "1.8.3",
     "vision": "^3.0.0",
