--- a/packages/colonizers-desktop/package.json
+++ b/packages/colonizers-desktop/package.json
@@ -11,17 +11,12 @@
     "start": "electron .",
     "test": "lab --verbose --lint",
     "build": "rm -rf __dist__ ; npm run linux-x86 ; npm run linux-x64 ; npm run osx",
-    "linux-x86": "electron-packager . Colonizers --platform=linux --arch=ia32 --version=0.28.3 --out=./__dist__/Colonizers-linux-x86 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
-    "linux-x64": "electron-packager . Colonizers --platform=linux --arch=x64 --version=0.28.3 --out=./__dist__/Colonizers-linux-x64 --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab",
-    "osx": "electron-packager . Colonizers --platform=darwin --arch=x64 --version=0.28.3 --asar --out=./__dist__/Colonizers-osx --ignore=./__dist__ --ignore=./node_modules/code --ignore=./node_modules/lab"
-  },
-  "dependencies": {
-    "babel": "^5.6.14"
+    "linux-x86": "electron-packager . Colonizers --platform=linux --arch=ia32 --electron-version=1.8.8 --out=./__dist__/Colonizers-linux-x86 --ignore=./__dist__",
+    "linux-x64": "electron-packager . Colonizers --platform=linux --arch=x64 --electron-version=1.8.8 --out=./__dist__/Colonizers-linux-x64 --ignore=./__dist__",
+    "osx": "electron-packager . Colonizers --platform=darwin --arch=x64 --electron-version=1.8.8 --asar --out=./__dist__/Colonizers-osx --ignore=./__dist__"
   },
   "devDependencies": {
-    "code": "^1.4.1",
-    "electron-packager": "^4.2.0",
-    "electron-prebuilt": "^0.28.3",
-    "lab": "^5.11.1"
+    "electron": "^1.8.8",
+    "electron-packager": "^14.0.1"
   }
 }
