--- a/packages/colonizers-core/package.json
+++ b/packages/colonizers-core/package.json
@@ -25,7 +25,9 @@
     "lab-babel": "^1.1.1"
   },
   "babel": {
-    "presets": ["es2015"]
+    "presets": [
+      "es2015"
+    ]
   },
   "browserify": {
     "transform": [
