--- a/packages/colonizers/package.json
+++ b/packages/colonizers/package.json
@@ -48,13 +48,11 @@
     "wascally": "^0.2.7"
   },
   "devDependencies": {
-    "code": "^1.5.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-insert": "^0.5.0",
     "gulp-less": "^3.0.3",
     "gulp-replace": "^0.5.4",
-    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3",
-    "lab": "^6.1.0"
+    "jasny-bootstrap": "git://github.com/jasny/bootstrap#v3.1.3"
   }
 }
