--- a/packages/colonizers-client/package.json
+++ b/packages/colonizers-client/package.json
@@ -20,9 +20,9 @@
     "jquery-mousewheel": "3.1.13",
     "knockout": "3.3.0",
     "konva": "^0.9.5",
+    "lodash": "^4.17.15",
     "moment": "2.10.6",
-    "screenfull": "2.0.0",
-    "underscore": "1.8.3"
+    "screenfull": "2.0.0"
   },
   "devDependencies": {
     "dataurl": "^0.1.0",
